fix: changed colors on registration to work in dark mode

--- a/src/app/(noNavbar)/signIn/register/register.module.scss
+++ b/src/app/(noNavbar)/signIn/register/register.module.scss
@@ -98,7 +98,7 @@
     gap: 1rem;
     margin-bottom: 2rem;
     label {
-      border: 1px dashed rgba(0, 0, 0, 0.3);
+      border: 1px dashed rgb(87, 87, 87);
       background-color: var(--primary-bg);
       width: 100%;
       height: 15rem;
